# python_sql_tutorial

./: .gitignore  db_connection.py  main.py  pyproject.toml
config/: definitions.py
crud/: defect_event_root_cause.py
data_analysis/: dataframes.py  defect_event_root_cause.py  defect_root_cause_pairs.py  plots.py
db_engines/: sql_server_engine.py  sqlite_engine.py
db_engines/db_sources_data/: sql_server_test_localhost.py  sqlite_test.py
db_models/: base.py  defect_event.py  defect_root_cause.py  signal_meta.py
ddl_scripts/: adding_data.py  creating_tables.py
dql_scripts/: select_joins.py  simple_select.py
loguru_logging/: debug_formatter.py  trace_handler.py
phillip/: db_connection.py
phillip/crud/: defect_event_root_cause.py  defect_root_cause_pairs.py
phillip/db_models/: base.py  defect_event.py  signal_meta.py
