[tool.poetry]
name = "python-sql-tutorial"
version = "0.1.0"
description = "Tutorial for working with RDB in Python Projects"
authors = ["Ilia Nikolaenko <niil02@sms-group.com>"]

[tool.poetry.dependencies]
python = "^3.9"
# Databases
SQLAlchemy = "^1.4.42"
pyodbc = "^4.0.32"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
