[tool.poetry]
name = "python_sql_tutorial"
version = "0.1.0"
description = "Tutorial for working with RDB in Python Projects"
authors = ["Ilia Nikolaenko <niil02@sms-group.com>"]

[[tool.poetry.source]]
name = "trusted_store"
url = "https://pypi.org/simple"
default = true

[[tool.poetry.source]]
name = "trusted_files"
url = "https://files.pythonhosted.org/packages"
default = false

[tool.poetry.dependencies]
python = "^3.9"

numpy = "^1.20"
pandas = "^1.3.1"
matplotlib ="^3.7"

# Databases
SQLAlchemy = "^1.4.42"
pyodbc = "^4.0.32"

# Misc
pydantic = "^1.8.2"
APScheduler = "^3.7.0"

# Logging
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
